--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -1,172 +1,177 @@
 packages:
   darwin:
     taps:
-      - "ttscoff/thelab"
-      - "1password/tap"
-      - "jandedobbeleer/oh-my-posh"
-      - "warrensbox/tap"
+      global:
+        - "ttscoff/thelab"
+        - "1password/tap"
+        - "jandedobbeleer/oh-my-posh"
+        - "warrensbox/tap"
+      personal:
+      work:
     brews:
-      - "ack"
-      - "asciinema"
-      - "aspell"
-      - "bash"
-      - "bat-extras"
-      - "bat"
-      - "bottom"
-      - "brew-gem"
-      - "ccat"
-      - "cheat"
-      - "chezmoi"
-      - "clang-format"
-      - "cloc"
-      - "colordiff"
-      - "commitizen"
-      - "coreutils"
-      - "ctags"
-      - "curl"
-      - "dash"
-      - "delve"
-      - "direnv"
-      - "dockutil"
-      - "dos2unix"
-      - "eza"
-      - "fastfetch"
-      - "findutils"
-      - "freetds"
-      - "fzf"
-      - "gcc"
-      - "gdu"
-      - "gh"
-      - "ghostscript"
-      - "git-delta"
-      - "git-lfs"
-      - "git-town"
-      - "git"
-      - "github-keygen"
-      - "gitleaks"
-      - "glow"
-      - "gnupg"
-      - "go"
-      - "golangci-lint"
-      - "graphviz"
-      - "grc"
-      - "grep"
-      - "helm"
-      - "highlight"
-      - "htop"
-      - "imagemagick"
-      - "ipcalc"
-      - "jenv"
-      - "jq"
-      - "jsonlint"
-      - "kubernetes-cli"
-      - "less"
-      - "lesspipe"
-      - "lnav"
-      - "lsd"
-      - "minikube"
-      - "multimarkdown"
-      - "mysql"
-      - "ncdu"
-      - "nmap"
-      - "node"
-      - "nvm"
-      - "openssl@3"
-      - "p7zip"
-      - "pandoc"
-      - "pinentry-mac"
-      - "pipx"
-      - "pre-commit"
-      - "pygments"
-      - "readline"
-      - "rbenv"
-      - "rbenv-gemset"
-      - "rbenv-vars"
-      - "rename"
-      - "ripgrep"
-      - "ruby-build"
-      - "rust"
-      - "sipcalc"
-      - "source-highlight"
-      - "speedtest-cli"
-      - "ssh-copy-id"
-      - "streamlink"
-      - "switchaudio-osx"
-      - "terragrunt"
-      - "tflint"
-      - "tldr"
-      - "the_silver_searcher"
-      - "tmux"
-      - "trash"
-      - "tree"
-      # - "ttscoff/thelab/gather-cli"
-      - "viddy"
-      - "vim"
-      - "virtualenv"
-      - "warrensbox/tap/tfswitch"
-      - "watch"
-      - "wget"
-      - "whois"
-      - "wifi-password"
-      - "yamllint"
-      - "yarn"
-      - "yubikey-agent"
-      - "zsh-autosuggestions"
-      - "zsh-completions"
-      - "zsh-syntax-highlighting"
-      - "zsh"
-      - "jandedobbeleer/oh-my-posh/oh-my-posh"
+      global:
+        - "ack"
+        - "asciinema"
+        - "aspell"
+        - "bash"
+        - "bat-extras"
+        - "bat"
+        - "bottom"
+        - "brew-gem"
+        - "ccat"
+        - "cheat"
+        - "chezmoi"
+        - "clang-format"
+        - "cloc"
+        - "colordiff"
+        - "commitizen"
+        - "coreutils"
+        - "ctags"
+        - "curl"
+        - "dash"
+        - "delve"
+        - "direnv"
+        - "dockutil"
+        - "dos2unix"
+        - "eza"
+        - "fastfetch"
+        - "findutils"
+        - "freetds"
+        - "fzf"
+        - "gcc"
+        - "gdu"
+        - "gh"
+        - "ghostscript"
+        - "git-delta"
+        - "git-lfs"
+        - "git-town"
+        - "git"
+        - "github-keygen"
+        - "glow"
+        - "gnupg"
+        - "go"
+        - "golangci-lint"
+        - "graphviz"
+        - "grc"
+        - "grep"
+        - "highlight"
+        - "htop"
+        - "imagemagick"
+        - "ipcalc"
+        - "jenv"
+        - "jq"
+        - "jsonlint"
+        - "kubernetes-cli"
+        - "less"
+        - "lesspipe"
+        - "lnav"
+        - "lsd"
+        - "minikube"
+        - "multimarkdown"
+        - "mysql"
+        - "ncdu"
+        - "nmap"
+        - "node"
+        - "nvm"
+        - "openssl@3"
+        - "p7zip"
+        - "pandoc"
+        - "pinentry-mac"
+        - "pipx"
+        - "pre-commit"
+        - "pygments"
+        - "readline"
+        - "rbenv"
+        - "rbenv-gemset"
+        - "rbenv-vars"
+        - "rename"
+        - "ripgrep"
+        - "ruby-build"
+        - "sipcalc"
+        - "source-highlight"
+        - "speedtest-cli"
+        - "ssh-copy-id"
+        - "streamlink"
+        - "switchaudio-osx"
+        - "terragrunt"
+        - "tflint"
+        - "tldr"
+        - "the_silver_searcher"
+        - "tmux"
+        - "trash"
+        - "tree"
+        - "viddy"
+        - "vim"
+        - "virtualenv"
+        - "watch"
+        - "wget"
+        - "whois"
+        - "wifi-password"
+        - "yamllint"
+        - "yarn"
+        - "yubikey-agent"
+        - "zsh-autosuggestions"
+        - "zsh-completions"
+        - "zsh-syntax-highlighting"
+        - "zsh"
+        - "jandedobbeleer/oh-my-posh/oh-my-posh"
+      personal:
+        - "rust"
+      work:
+        - "warrensbox/tap/tfswitch"
+        - "helm"
     casks:
-      - "1password"
-      - "1password-cli"
-      - "airbuddy"
-      - "alfred"
-      - "arc"
-      - "beyond-compare"
-      - "bunch"
-      - "caldigit-docking-utility"
-      - "caldigit-thunderbolt-charging"
-      - "camo-studio"
-      - "dash"
-      - "devonthink"
-      - "docker"
-      - "dotnet-sdk"
-      - "firefox"
-      - "font-fira-code-nerd-font"
-      - "font-inconsolata"
-      - "font-jetbrains-mono"
-      - "font-meslo-for-powerline"
-      - "font-meslo-lg-nerd-font"
-      - "goland"
-      - "google-chrome"
-      - "google-cloud-sdk"
-      - "hazel"
-      - "iterm2"
-      - "kaleidoscope"
-      - "keyboard-maestro"
-      - "keyboardcleantool"
-      # - "logi-options-plus"
-      - "microsoft-auto-update"
-      - "microsoft-edge"
-      - "microsoft-teams"
-      - "moom"
-      - "obsidian"
-      - "postman"
-      - "powershell"
-      - "raindropio"
-      - "setapp" # Installed once manually
-      - "sf-symbols"
-      - "signal"
-      - "slack"
-      - "snagit"
-      - "soundsource"
-      - "textexpander"
-      - "tower"
-      - "transmit"
-      - "visual-studio-code"
-      - "yubico-authenticator"
-      - "yubico-yubikey-manager"
-      - "zoom"
+      global:
+        - "1password"
+        - "1password-cli"
+        - "airbuddy"
+        - "alfred"
+        - "beyond-compare"
+        - "caldigit-docking-utility"
+        - "caldigit-thunderbolt-charging"
+        - "camo-studio"
+        - "dash"
+        - "devonthink"
+        - "docker"
+        - "dotnet-sdk"
+        - "font-fira-code-nerd-font"
+        - "font-inconsolata"
+        - "font-jetbrains-mono"
+        - "font-meslo-for-powerline"
+        - "font-meslo-lg-nerd-font"
+        - "google-chrome"
+        - "hazel"
+        - "iterm2"
+        - "kaleidoscope"
+        - "keyboard-maestro"
+        - "keyboardcleantool"
+        - "logi-options-plus"
+        - "microsoft-auto-update"
+        - "microsoft-edge"
+        - "microsoft-teams"
+        - "moom"
+        - "obsidian"
+        - "powershell"
+        - "raindropio"
+        - "setapp" # Installed once manually
+        - "sf-symbols"
+        - "slack"
+        - "snagit"
+        - "soundsource"
+        - "textexpander"
+        - "tower"
+        - "transmit"
+        - "visual-studio-code"
+        - "yubico-authenticator"
+        - "yubico-yubikey-manager"
+        - "zoom"
+      personal:
+        - "arc"
+        - "dropbox"
+        - "signal"
+      work:
+        - "google-cloud-sdk"
+        - "postman"
   linux:
     packages:
       - "curl"
