chore: adds grammarly desktop

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -2,212 +2,213 @@ packages:
   darwin:
     taps:
       global:
-        - "ttscoff/thelab"
-        - "1password/tap"
-        - "jandedobbeleer/oh-my-posh"
-        - "warrensbox/tap"
-        - "buo/cask-upgrade"
+        - ttscoff/thelab
+        - 1password/tap
+        - jandedobbeleer/oh-my-posh
+        - warrensbox/tap
+        - buo/cask-upgrade
       personal:
       work:
     brews:
       global:
-        - "ack"
-        - "asciinema"
-        - "aspell"
-        - "bash"
-        - "bat-extras"
-        - "bat"
-        - "bottom"
-        - "brew-gem"
-        - "ccat"
-        - "cheat"
-        - "chezmoi"
-        - "clang-format"
-        - "cloc"
-        - "colordiff"
-        - "commitizen"
-        - "coreutils"
-        - "ctags"
-        - "curl"
-        - "dash"
-        - "delve"
-        - "direnv"
-        - "dockutil"
-        - "dos2unix"
-        - "eza"
-        - "fastfetch"
-        - "findutils"
-        - "freetds"
-        - "fzf"
-        - "gcc"
-        - "gdu"
-        - "gh"
-        - "ghostscript"
-        - "git-delta"
-        - "git-lfs"
-        - "git-town"
-        - "git"
-        - "github-keygen"
-        - "glow"
-        - "gnupg"
-        - "go"
-        - "golangci-lint"
-        - "graphviz"
-        - "grc"
-        - "grep"
-        - "highlight"
-        - "htop"
-        - "imagemagick"
-        - "ipcalc"
-        - "jenv"
-        - "jq"
-        - "jsonlint"
-        - "kubernetes-cli"
-        - "less"
-        - "lesspipe"
-        - "lnav"
-        - "lsd"
-        - "minikube"
-        - "multimarkdown"
-        - "mysql"
-        - "ncdu"
-        - "nmap"
-        - "node"
-        - "nvm"
-        - "openssl@3"
-        - "p7zip"
-        - "pandoc"
-        - "pinentry-mac"
-        - "pipx"
-        - "pre-commit"
-        - "pygments"
-        - "readline"
-        - "rbenv"
-        - "rbenv-gemset"
-        - "rbenv-vars"
-        - "rename"
-        - "ripgrep"
-        - "ruby-build"
-        - "sipcalc"
-        - "source-highlight"
-        - "speedtest-cli"
-        - "ssh-copy-id"
-        - "streamlink"
-        - "switchaudio-osx"
-        - "terragrunt"
-        - "tflint"
-        - "tldr"
-        - "the_silver_searcher"
-        - "tmux"
-        - "trash"
-        - "tree"
-        - "viddy"
-        - "vim"
-        - "virtualenv"
-        - "watch"
-        - "wget"
-        - "whois"
-        - "wifi-password"
-        - "yamllint"
-        - "yarn"
-        - "yubikey-agent"
-        - "zsh-autosuggestions"
-        - "zsh-completions"
-        - "zsh-syntax-highlighting"
-        - "zsh"
-        - "jandedobbeleer/oh-my-posh/oh-my-posh"
+        - ack
+        - asciinema
+        - aspell
+        - bash
+        - bat-extras
+        - bat
+        - bottom
+        - brew-gem
+        - ccat
+        - cheat
+        - chezmoi
+        - clang-format
+        - cloc
+        - colordiff
+        - commitizen
+        - coreutils
+        - ctags
+        - curl
+        - dash
+        - delve
+        - direnv
+        - dockutil
+        - dos2unix
+        - eza
+        - fastfetch
+        - findutils
+        - freetds
+        - fzf
+        - gcc
+        - gdu
+        - gh
+        - ghostscript
+        - git-delta
+        - git-lfs
+        - git-town
+        - git
+        - github-keygen
+        - glow
+        - gnupg
+        - go
+        - golangci-lint
+        - graphviz
+        - grc
+        - grep
+        - highlight
+        - htop
+        - imagemagick
+        - ipcalc
+        - jenv
+        - jq
+        - jsonlint
+        - kubernetes-cli
+        - less
+        - lesspipe
+        - lnav
+        - lsd
+        - minikube
+        - multimarkdown
+        - mysql
+        - ncdu
+        - nmap
+        - node
+        - nvm
+        - openssl@3
+        - p7zip
+        - pandoc
+        - pinentry-mac
+        - pipx
+        - pre-commit
+        - pygments
+        - readline
+        - rbenv
+        - rbenv-gemset
+        - rbenv-vars
+        - rename
+        - ripgrep
+        - ruby-build
+        - sipcalc
+        - source-highlight
+        - speedtest-cli
+        - ssh-copy-id
+        - streamlink
+        - switchaudio-osx
+        - terragrunt
+        - tflint
+        - tldr
+        - the_silver_searcher
+        - tmux
+        - trash
+        - tree
+        - viddy
+        - vim
+        - virtualenv
+        - watch
+        - wget
+        - whois
+        - wifi-password
+        - yamllint
+        - yarn
+        - yubikey-agent
+        - zsh-autosuggestions
+        - zsh-completions
+        - zsh-syntax-highlighting
+        - zsh
+        - jandedobbeleer/oh-my-posh/oh-my-posh
       personal:
-        - "rust"
-        - "gum"
+        - rust
+        - gum
 
       work:
-        - "warrensbox/tap/tfswitch"
-        - "helm"
+        - warrensbox/tap/tfswitch
+        - helm
     casks:
       global:
-        - "1password"
-        - "1password-cli"
-        - "airbuddy"
-        - "alfred"
-        - "beyond-compare"
-        - "caldigit-docking-utility"
-        - "caldigit-thunderbolt-charging"
-        - "camo-studio"
-        - "dash"
-        - "devonthink"
-        - "docker"
-        - "dotnet-sdk"
-        - "font-fira-code-nerd-font"
-        - "font-inconsolata"
-        - "font-jetbrains-mono"
-        - "font-meslo-for-powerline"
-        - "font-meslo-lg-nerd-font"
-        - "google-chrome"
-        - "hazel"
-        - "iterm2"
-        - "kaleidoscope"
-        - "keyboard-maestro"
-        - "keyboardcleantool"
-        - "logi-options-plus"
-        - "macupdater"
-        - "microsoft-auto-update"
-        - "microsoft-edge"
-        - "microsoft-teams"
-        - "moom"
-        - "obsidian"
-        - "powershell"
-        - "raindropio"
-        - "setapp" # Installed once manually
-        - "sf-symbols"
-        - "slack"
-        - "snagit"
-        - "soundsource"
-        - "textexpander"
-        - "tower"
-        - "transmit"
-        - "visual-studio-code"
-        - "yubico-authenticator"
-        - "yubico-yubikey-manager"
-        - "zoom"
+        - 1password
+        - 1password-cli
+        - airbuddy
+        - alfred
+        - beyond-compare
+        - caldigit-docking-utility
+        - caldigit-thunderbolt-charging
+        - camo-studio
+        - dash
+        - devonthink
+        - docker
+        - dotnet-sdk
+        - font-fira-code-nerd-font
+        - font-inconsolata
+        - font-jetbrains-mono
+        - font-meslo-for-powerline
+        - font-meslo-lg-nerd-font
+        - google-chrome
+        - hazel
+        - iterm2
+        - kaleidoscope
+        - keyboard-maestro
+        - keyboardcleantool
+        - logi-options-plus
+        - macupdater
+        - microsoft-auto-update
+        - microsoft-edge
+        - microsoft-teams
+        - moom
+        - obsidian
+        - powershell
+        - raindropio
+        - setapp # Installed once manually
+        - sf-symbols
+        - slack
+        - snagit
+        - soundsource
+        - textexpander
+        - tower
+        - transmit
+        - visual-studio-code
+        - yubico-authenticator
+        - yubico-yubikey-manager
+        - zoom
       personal:
-        - "anylist"
-        - "arc"
-        - "calibre"
-        - "curseforge"
-        - "discord"
-        - "dropbox"
-        - "elgato-stream-deck"
-        - "fastscripts"
-        - "firefox"
-        - "imazing"
-        - "little-snitch"
-        - "mailmate"
-        - "minecraft"
-        - "private-internet-access"
-        - "signal"
-        - "silentknight"
-        - "vlc"
-        - "zen-browser"
-        - "zotero@beta"
+        - anylist
+        - arc
+        - calibre
+        - curseforge
+        - discord
+        - dropbox
+        - elgato-stream-deck
+        - fastscripts
+        - firefox
+        - grammarly-desktop
+        - imazing
+        - little-snitch
+        - mailmate
+        - minecraft
+        - private-internet-access
+        - signal
+        - silentknight
+        - vlc
+        - zen-browser
+        - zotero@beta
       work:
-        - "google-cloud-sdk"
-        - "postman"
+        - google-cloud-sdk
+        - postman
   linux:
     packages:
-      - "curl"
-      - "direnv"
-      - "neofetch"
-      - "rbenv"
-      - "tmux"
-      - "vim"
-      - "wget"
-      - "zsh"
+      - curl
+      - direnv
+      - neofetch
+      - rbenv
+      - tmux
+      - vim
+      - wget
+      - zsh
     snaps:
-      - "brave"
+      - brave
   windows:
     winget:
-      - "JanDeDobbeleer.OhMyPosh"
-      - "Microsoft.PowerShell"
-      - "Microsoft.PowerToys"
-      - "Microsoft.VisualStudioCode"
-      - "Microsoft.WindowsTerminal"
+      - JanDeDobbeleer.OhMyPosh
+      - Microsoft.PowerShell
+      - Microsoft.PowerToys
+      - Microsoft.VisualStudioCode
+      - Microsoft.WindowsTerminal
