--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -2,21 +2,22 @@ packages:
   darwin:
     taps:
       global:
-        - ttscoff/thelab
         - 1password/tap
-        - jandedobbeleer/oh-my-posh
-        - warrensbox/tap
         - buo/cask-upgrade
+        - jandedobbeleer/oh-my-posh
+        - ttscoff/thelab
+        - warrensbox/tap
       personal:
       work:
+        - hashicorp/tap
     brews:
       global:
         - ack
         - asciinema
         - aspell
         - bash
-        - bat-extras
         - bat
+        - bat-extras
         - bottom
         - brew-gem
         - ccat
@@ -45,10 +46,10 @@ packages:
         - gdu
         - gh
         - ghostscript
+        - git
         - git-delta
         - git-lfs
         - git-town
-        - git
         - github-keygen
         - glow
         - gnupg
@@ -61,6 +62,7 @@ packages:
         - htop
         - imagemagick
         - ipcalc
+        - jandedobbeleer/oh-my-posh/oh-my-posh
         - jenv
         - jq
         - jsonlint
@@ -76,6 +78,7 @@ packages:
         - ncdu
         - nmap
         - node
+        - numpy
         - nvm
         - openssl@3
         - p7zip
@@ -86,10 +89,10 @@ packages:
         - pipx
         - pre-commit
         - pygments
-        - readline
         - rbenv
         - rbenv-gemset
         - rbenv-vars
+        - readline
         - rename
         - ripgrep
         - ruby-build
@@ -101,8 +104,8 @@ packages:
         - switchaudio-osx
         - terragrunt
         - tflint
-        - tldr
         - the_silver_searcher
+        - tldr
         - tmux
         - trash
         - tree
@@ -116,24 +119,28 @@ packages:
         - yamllint
         - yarn
         - yubikey-agent
+        - zsh
         - zsh-autosuggestions
         - zsh-completions
         - zsh-syntax-highlighting
-        - zsh
-        - jandedobbeleer/oh-my-posh/oh-my-posh
       personal:
-        - rust
         - gum
         - mas
+        - rust
       work:
-        - warrensbox/tap/tfswitch
+        - ansible
+        - checkov
+        - hashicorp/tap/packer
         - helm
+        - warrensbox/tap/tfswitch
     casks:
       global:
-        - name: alfred
         - name: 1password-cli
+        - name: alfred
         - name: beyond-compare
+        - name: camo-studio
         - name: cyberduck
+        - name: devonthink
         - name: dotnet-sdk
         - name: font-fira-code-nerd-font
         - name: font-jetbrains-mono
@@ -147,22 +154,28 @@ packages:
         - name: powershell
         - name: raindropio
         - name: reader
+        - name: setapp # Installed once manually
         - name: sf-symbols
+        - name: signal
         - name: snagit
+        - name: soundsource
         - name: textexpander
         - name: tower
+        - name: visual-studio-code
+        - name: visual-studio-code@insiders
       personal:
+        - name: 1password
+          args:
+            appdir: "/Applications"
         - name: airbuddy
         - name: anylist
         - name: arc
         - name: caldigit-docking-utility
         - name: caldigit-thunderbolt-charging
         - name: calibre
-        - name: camo-studio
         - name: chatgpt
         - name: curseforge
         - name: dash
-        - name: devonthink
         - name: discord
         - name: docker
         - name: dropbox
@@ -176,6 +189,9 @@ packages:
         - name: iterm2
         - name: keyboard-maestro
         - name: keyboardcleantool
+        - name: little-snitch
+          args:
+            appdir: "/Applications"
         - name: macupdater
         - name: mailmate
         - name: microsoft-auto-update
@@ -185,29 +201,19 @@ packages:
         - name: mountain-duck
         - name: openaudible
         - name: private-internet-access
-        - name: setapp # Installed once manually
-        - name: signal
         - name: silentknight
         - name: slack
-        - name: soundsource
         - name: transmit
-        - name: visual-studio-code
-        - name: visual-studio-code@insiders
         - name: vlc
         - name: yubico-authenticator
         - name: yubico-yubikey-manager
         - name: zen
         - name: zoom
         - name: zotero@beta
-        - name: 1password
-          args:
-            appdir: "/Applications"
-        - name: little-snitch
-          args:
-            appdir: "/Applications"
       work:
         - name: google-cloud-sdk
         - name: postman
+        - name: windows-app
   linux:
     packages:
       - curl
