--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -80,6 +80,7 @@ packages:
         - name: nmap
         - name: node
         - name: numpy
+        - name: neovim
         - name: nvm
         - name: openssl@3
         - name: p7zip
