Update .chezmoidata/packages.yaml Update .config/nvim/lazy-lock.json

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -242,6 +242,7 @@ packages:
       work:
         - name: google-cloud-sdk
         - name: postman
+        - name: zotero
   linux:
     packages:
       - curl
