Update .chezmoidata/packages.yaml Update .chezmoiexternal.yaml Update .config/nvim/lazy-lock.json Update .zsh_aliases Update .zshrc Update .gitconfig

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -192,6 +192,8 @@ packages:
         - name: airbuddy
         - name: anylist
         - name: arc
+        - name: backblaze
+        - name: backblaze-downloader
         - name: caldigit-docking-utility
           excludeEphemeral: true
         - name: caldigit-thunderbolt-charging
