Update .chezmoidata/packages.yaml Update .config/bat/config Update .zsh_aliases Update .zshrc

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -129,6 +129,7 @@ packages:
         - name: yamllint
         - name: yarn
         - name: yubikey-agent
+        - name: zoxide
         - name: zsh
         - name: zsh-autosuggestions
         - name: zsh-completions
