--- a/home/dot_config/alacritty/alacritty.toml
+++ b/home/dot_config/alacritty/alacritty.toml
@@ -7,17 +7,22 @@ general.import = [
 TERM = "xterm-256color"
 
 [window]
-padding.x = 10
-padding.y = 10
-
-# decorations = "Buttonless"
-
-opacity = 0.8
+decorations = "buttonless"
+dynamic_padding = false
+opacity = 0.7
 blur = true
 
-option_as_alt = "Both"
+[window.padding]
+x = 10
+y = 10
 
 [font]
 normal.family = "MesloLGS Nerd Font Mono"
+normal.style = "Regular"
+bold.style = "Bold"
+bold_italic.style = "Bold Italic"
+italic.style = "Italic"
 
-size = 12
+size = 14
+
+
