--- a/home/dot_config/alacritty/alacritty.toml
+++ b/home/dot_config/alacritty/alacritty.toml
@@ -1,28 +1,34 @@
 general.import = [
-  # "~/.config/alacritty/catppuccin-latte.toml"
-  "~/.config/alacritty/catppuccin-mocha.toml"
+    # "~/.config/alacritty/catppuccin-latte.toml"
+    "~/.config/alacritty/catppuccin-mocha.toml"
 ]
 
 [env]
-TERM = "xterm-256color"
+    TERM = "xterm-256color"
 
 [window]
-decorations = "buttonless"
-dynamic_padding = false
-opacity = 0.7
-blur = true
+    decorations = "buttonless"
+    dynamic_padding = false
+    opacity = 0.7
+    blur = true
+
+    option_as_alt = "Both" # Make Option key behave as Alt for keyboard shortcuts
 
 [window.padding]
-x = 10
-y = 10
+  x = 10
+  y = 10
 
 [font]
-normal.family = "MesloLGS Nerd Font Mono"
-normal.style = "Regular"
-bold.style = "Bold"
-bold_italic.style = "Bold Italic"
-italic.style = "Italic"
+    normal.family = "MesloLGS Nerd Font Mono"
 
-size = 12
+    normal.style = "Regular"
+    bold.style = "Bold"
+    bold_italic.style = "Bold Italic"
+    italic.style = "Italic"
 
+    size = 11
+
+[scrolling]
+    history = 10000 # Maximum lines in scrollback buffer
+    multiplier = 3 # Lines scrolled per input scroll increment
 
